<resources>
    <string name="app_name">MapQuiz</string>
   <!-- <string name="google_maps_key">AIzaSyCC-wGFNDNuO-KG4kZme2z5xRwtbfSzNl8</string>-->
    <string name="single_player">SINGLEPLAYER</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="work_in_progress">Work in Progress</string>
    <string name="start_the_game">Start The Game</string>
    <string name="next_level">Next Level</string>
    <string name="guess_the_country">GUESS THE COUNTRY</string>
    <string name="guess_the_city">GUESS THE CITY</string>
    <string name="preference_file_key">com.example.mapsproject.PREFERENCE_FILE_KEY</string>
    <string name="high_score">HIGH SCORE: </string>
    <string name="high_score_key">high_score</string>
    <string name="current_score_key">score</string>
    <string name="score">SCORE:</string>
    <string name="sets_key">sets</string>
    <string name="email">Email</string>
    <string name="email_key">email</string>
    <string name="password">password</string>
    <string name="submit">Submit</string>
    <string name="keep_me_signed">Keep me signed</string>
    <string name="insert_password_again">insert password again</string>
    <string name="forgot_passwors">Forgot Passwors?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="end">END</string>
    <string name="continue_">Continue</string>
    <string name="button">Button</string>
    <string name="email_regular_expr">*@*.*</string>
    <string name="log_out">Log Out</string>
    <string name="end_game">End Game</string>
    <string name="password_key">password</string>
    <string name="start_new_game">Start New Game</string>
    <string name="start_against_random">Join Against Random</string>
    <string name="join_a_game">Join a game</string>
    <string name="create_new_game">Create New Game</string>
    <string name="share">Share</string>
    <string name="join_with_game_id">Join with game ID</string>
    <string name="loading">Loading</string>
    <string name="join_a_game_against_random">JOIN A GAME AGAINST RANDOM</string>
    <string name="game_id">Game ID</string>
    <string name="number_of_players_in_the_game">Number of Players in the game</string>
    <string name="_1">1</string>
    <string name="number_of_levels">Number of Levels</string>
    <string name="_3">3</string>
    <string name="Account">Account</string>
    <string name="name">Name</string>
    <string name="uid">UID</string>
    <string name="edit_account_name">Edit Account Name</string>
    <string name="edit_account_email">Edit Account Email</string>
    <string name="username">Username</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="select_a_picture">Select a Picture</string>
    <string name="upload">Upload</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="italian">Italian</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="insert_g_id">Insert Game ID</string>
    <string name="title_back_press">END GAME</string>
    <string name="title_close_app">CLOSE APP</string>
    <string name="msg_back_press">Are you sure you want to END THE GAME?"</string>
    <string name="msg_close_app">Are you sure you want to CLOSE THE APP?"</string>
    <string name="title_pl_left">A PLAYER HAS LEFT THE GAME</string>
    <string name="msg_pl_left">Do you want to continue playing?</string>
    <string name="y">YES</string>
    <string name="n">NO</string>
    <string name="title_end_g">MASTER PLAYER HAS ENDED THE GAME</string>
    <string name="exit">Exit</string>
    <string name="leaderboard">Leaderboard</string>

    <string name="share_g_id_msg">join my game on MapQuiz, this is my game id:</string>

    <string name="input">Input</string>
    <string name="chat">Chat</string>
    <string name="todo">TODO</string>
    <string name="msg_forgot_pw">Reset link sent to your email</string>
    <string name="msg_forgot_pw_fail">Unable to send reset mail</string>
    <string name="level">level</string>
    <string name="points">points</string>
    <string name="players">players</string>
    <string name="levels">Levels:</string>
    <string name="is_already_logged_in">  is already logged in</string>
    <string name="pl_in_game">PLAYERS IN THE GAME</string>
    <string name="continue_game">CONTINUE THE GAME</string>
    <string name="Feature_not_available">Feature is not available</string>
    <string name="sorry_feature_message">We are sorry, this feature is available only for Android R devices</string>

</resources>