<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_app"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/single_player_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/multiplayer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/multiplayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/single_player_btn" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:showDividers="middle"
        android:divider="@drawable/empty_short_divider">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/chat_fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/stat_notify_chat"
            android:contentDescription="@string/todo" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/leaderboard_fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_input_get" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>