<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/sfondo_app"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over">


    <TextView
        android:id="@+id/settingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/Layout_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/layout_bg"
        android:backgroundTint="#80FFFFFF"
        android:backgroundTintMode="src_over"
        android:alpha="0.7">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/soundSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:checked="true"
            android:text="@string/sound"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_levels"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/levels_int"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_vertical_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/languageSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <!--<com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="195dp"
            tools:layout_editor_absoluteY="397dp"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/en_lan_butt"
                android:text="@string/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:id="@+id/it_lan_butt"
                android:text="@string/italian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.google.android.material.chip.ChipGroup>-->


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>