<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/sfondo_app"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_mp"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentLeft="true"
                    >
                    <TextView
                        android:id="@+id/curr_lev_sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text=" 0/0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
                    <TextView
                        android:id="@+id/num_levels_sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text="@string/level"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_alignParentRight="true"
                    >
                    <TextView
                        android:id="@+id/curr_score_sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
                    <TextView
                        android:id="@+id/score_sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:gravity="center_horizontal"
                        android:textStyle="bold"
                        android:text="@string/points"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </LinearLayout>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="70dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ready_button_sp"
            android:layout_marginTop="60dp"
            android:visibility="invisible"
            android:text="@string/continue_game"/>
    </LinearLayout>



</RelativeLayout>