<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_mp"
            android:layout_width="match_parent"
            android:layout_height="70dp">
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentLeft="true"
                    >
                    <TextView
                        android:id="@+id/curr_lev"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:gravity="center_horizontal"
                        android:text=" 0/0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
                    <TextView
                        android:id="@+id/num_levels"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:gravity="center_horizontal"
                        android:text="@string/level"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    >
                    <TextView
                        android:id="@+id/num_players"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:visibility="invisible"
                        android:text="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
                    <TextView
                        android:id="@+id/players"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:gravity="center_horizontal"
                        android:text="@string/players"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentRight="true"
                    >
                    <TextView
                        android:id="@+id/curr_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
                    <TextView
                        android:id="@+id/score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:gravity="center_horizontal"
                        android:text="@string/points"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </LinearLayout>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <include
        android:id="@+id/include"
        layout="@layout/content_main_multiplayer" />


</RelativeLayout>